llvm/src/snapshots/transmute_llvm__tests__struct_read_field_const_struct_unoptimized.snap
---
source: llvm/src/lib.rs
expression: llvm_ir
---
; ModuleID = 'main'
source_filename = "main"

%"Struct#id0" = type { i64 }

; Function Attrs: nounwind
declare void @llvm.gcroot(ptr, ptr) #0

declare ptr @gc_malloc(i64, i64, ptr)

declare void @gc_run()

declare void @gc_mark(ptr)

declare void @tmc_check_array_index(i64, i64, i64, i64)

declare void @_TM0_5print1n(i64)

declare void @_TM0_5print1b(i1)

define private void @_glob() {
entry:
  unreachable
}

define void @_TM0_1f0() gc "shadow-stack" {
entry:
  %"gcroot#heap#struct#Struct#id0#" = alloca ptr, align 8
  store ptr null, ptr %"gcroot#heap#struct#Struct#id0#", align 8
  call void @llvm.gcroot(ptr %"gcroot#heap#struct#Struct#id0#", ptr null)
  %"s#local#sym22#" = alloca i64, align 8
  %"heap#struct#Struct#id0#" = call ptr @gc_malloc(i64 ptrtoint (ptr getelementptr (%"Struct#id0", ptr null, i32 1) to i64), i64 ptrtoint (ptr getelementptr ({ i1, %"Struct#id0" }, ptr null, i64 0, i32 1) to i64), ptr null)
  store ptr %"heap#struct#Struct#id0#", ptr %"gcroot#heap#struct#Struct#id0#", align 8
  %"heap#struct#Struct#id0#.field#idx0#sym21" = getelementptr inbounds %"Struct#id0", ptr %"heap#struct#Struct#id0#", i32 0, i32 0
  store i64 1, ptr %"heap#struct#Struct#id0#.field#idx0#sym21", align 4
  %"heap#struct#Struct#id0#.field#idx0#sym21#" = getelementptr inbounds %"Struct#id0", ptr %"heap#struct#Struct#id0#", i32 0, i32 0
  %"heap#struct#Struct#id0#.field#idx0#sym21#1" = load i64, ptr %"heap#struct#Struct#id0#.field#idx0#sym21#", align 4
  store i64 %"heap#struct#Struct#id0#.field#idx0#sym21#1", ptr %"s#local#sym22#", align 4
  call void @gc_run()
  ret void
}

attributes #0 = { nounwind }
