llvm/src/snapshots/transmute_llvm__tests__struct_read_nested_field_optimized.snap
---
source: llvm/src/lib.rs
expression: llvm_ir
---
; ModuleID = 'main'
source_filename = "main"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-i128:128-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@layout_s5Inner = global [2 x i64] zeroinitializer
@layout_s5Outer = global [4 x i64] [i64 0, i64 1, i64 0, i64 ptrtoint (ptr @layout_s5Inner to i64)]

; Function Attrs: nounwind
declare void @llvm.gcroot(ptr, ptr) #0

declare ptr @gc_malloc(i64)

declare void @gc_run()

declare void @tmc_check_array_index(i64, i64, i64, i64)

declare void @_TM0_5print1n(i64)

declare void @_TM0_5print1b(i1)

define private void @_glob() {
entry:
  unreachable
}

define i64 @_TM0_1f0() gc "shadow-stack" {
entry:
  %"gcroot#heap#struct#Inner#id0#" = alloca ptr, align 8
  store ptr null, ptr %"gcroot#heap#struct#Inner#id0#", align 8
  call void @llvm.gcroot(ptr nonnull %"gcroot#heap#struct#Inner#id0#", ptr nonnull @layout_s5Inner)
  %"outer#local#sym24#" = alloca ptr, align 8
  store ptr null, ptr %"outer#local#sym24#", align 8
  call void @llvm.gcroot(ptr nonnull %"outer#local#sym24#", ptr nonnull @layout_s5Outer)
  %"heap#struct#Inner#id0#" = call ptr @gc_malloc(i64 8)
  store ptr %"heap#struct#Inner#id0#", ptr %"gcroot#heap#struct#Inner#id0#", align 8
  store i64 1, ptr %"heap#struct#Inner#id0#", align 4
  %"heap#struct#Outer#id1#" = call ptr @gc_malloc(i64 8)
  store ptr %"heap#struct#Inner#id0#", ptr %"heap#struct#Outer#id1#", align 8
  store ptr %"heap#struct#Outer#id1#", ptr %"outer#local#sym24#", align 8
  call void @gc_run()
  %"outer#local#sym24#1" = load ptr, ptr %"outer#local#sym24#", align 8
  %"outer#local#sym24#1.inner#idx0#sym23#2" = load ptr, ptr %"outer#local#sym24#1", align 8
  %"outer#local#sym24#1.inner#idx0#sym23#2.field#idx0#sym22#3" = load i64, ptr %"outer#local#sym24#1.inner#idx0#sym23#2", align 4
  ret i64 %"outer#local#sym24#1.inner#idx0#sym23#2.field#idx0#sym22#3"
}

attributes #0 = { nounwind }
