llvm/src/snapshots/transmute_llvm__tests__struct_read_nested_field_var_unoptimized.snap
---
source: llvm/src/lib.rs
expression: llvm_ir
---
; ModuleID = 'main'
source_filename = "main"

%"Outer#id1" = type { ptr }
%"Inner#id0" = type { i64 }

@"gc_callbacks#s5Outer" = global { ptr, ptr } { ptr @"gc_callback#mark#s5Outer", ptr null }

; Function Attrs: nounwind
declare void @llvm.gcroot(ptr, ptr) #0

declare ptr @gc_malloc(i64, i64, ptr)

declare void @gc_run()

declare void @gc_mark(ptr)

declare void @tmc_check_array_index(i64, i64, i64, i64)

declare ptr @tmc_stdlib_string_new(ptr, i64)

define private void @_glob() {
entry:
  unreachable
}

define void @"gc_callback#mark#s5Outer"(ptr %0) {
entry:
  %"local#field0_ptr" = getelementptr inbounds %"Outer#id1", ptr %0, i32 0, i32 0
  %"local#field0" = load ptr, ptr %"local#field0_ptr", align 8
  call void @gc_mark(ptr %"local#field0")
  ret void
}

define i64 @_TM0_1f0() gc "shadow-stack" {
entry:
  %"outer#local#sym24#" = alloca ptr, align 8
  %"inner#local#sym23#" = alloca ptr, align 8
  store ptr null, ptr %"inner#local#sym23#", align 8
  call void @llvm.gcroot(ptr %"inner#local#sym23#", ptr null)
  store ptr null, ptr %"outer#local#sym24#", align 8
  call void @llvm.gcroot(ptr %"outer#local#sym24#", ptr null)
  %"heap#struct#Inner#id0#" = call ptr @gc_malloc(i64 ptrtoint (ptr getelementptr (%"Inner#id0", ptr null, i32 1) to i64), i64 ptrtoint (ptr getelementptr ({ i1, %"Inner#id0" }, ptr null, i64 0, i32 1) to i64), ptr null)
  %"heap#struct#Inner#id0#.field#idx0#sym21" = getelementptr inbounds %"Inner#id0", ptr %"heap#struct#Inner#id0#", i32 0, i32 0
  store i64 1, ptr %"heap#struct#Inner#id0#.field#idx0#sym21", align 4
  store ptr %"heap#struct#Inner#id0#", ptr %"inner#local#sym23#", align 8
  call void @gc_run()
  %"inner#local#sym23#1" = load ptr, ptr %"inner#local#sym23#", align 8
  %"heap#struct#Outer#id1#" = call ptr @gc_malloc(i64 ptrtoint (ptr getelementptr (%"Outer#id1", ptr null, i32 1) to i64), i64 ptrtoint (ptr getelementptr ({ i1, %"Outer#id1" }, ptr null, i64 0, i32 1) to i64), ptr @"gc_callbacks#s5Outer")
  %"heap#struct#Outer#id1#.inner#idx0#sym22" = getelementptr inbounds %"Outer#id1", ptr %"heap#struct#Outer#id1#", i32 0, i32 0
  store ptr %"inner#local#sym23#1", ptr %"heap#struct#Outer#id1#.inner#idx0#sym22", align 8
  store ptr %"heap#struct#Outer#id1#", ptr %"outer#local#sym24#", align 8
  call void @gc_run()
  %"outer#local#sym24#2" = load ptr, ptr %"outer#local#sym24#", align 8
  %"outer#local#sym24#2.inner#idx0#sym22#" = getelementptr inbounds %"Outer#id1", ptr %"outer#local#sym24#2", i32 0, i32 0
  %"outer#local#sym24#2.inner#idx0#sym22#3" = load ptr, ptr %"outer#local#sym24#2.inner#idx0#sym22#", align 8
  %"outer#local#sym24#2.inner#idx0#sym22#3.field#idx0#sym21#" = getelementptr inbounds %"Inner#id0", ptr %"outer#local#sym24#2.inner#idx0#sym22#3", i32 0, i32 0
  %"outer#local#sym24#2.inner#idx0#sym22#3.field#idx0#sym21#4" = load i64, ptr %"outer#local#sym24#2.inner#idx0#sym22#3.field#idx0#sym21#", align 4
  ret i64 %"outer#local#sym24#2.inner#idx0#sym22#3.field#idx0#sym21#4"
}

attributes #0 = { nounwind }
