llvm/src/snapshots/transmute_llvm__tests__while_no_ret_optimized.snap
---
source: llvm/src/lib.rs
expression: llvm_ir
---
; ModuleID = 'main'
source_filename = "main"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-i128:128-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: nounwind
declare void @llvm.gcroot(ptr, ptr) #0

declare ptr @gc_malloc(i64, i64, ptr)

declare void @gc_run()

declare void @gc_mark(ptr)

declare void @tmc_check_array_index(i64, i64, i64, i64)

declare ptr @tmc_stdlib_string_new(ptr, i64)

define private void @_glob() {
entry:
  unreachable
}

define i1 @_TM0_1f1n(i64 %"n#param#sym18#") gc "shadow-stack" {
entry:
  br label %cond

cond:                                             ; preds = %cond, %entry
  %"lt#" = icmp slt i64 %"n#param#sym18#", 42
  br i1 %"lt#", label %cond, label %end_while

end_while:                                        ; preds = %cond
  ret i1 true
}

attributes #0 = { nounwind }
