llvm/src/snapshots/transmute_llvm__tests__while_value_optimized.snap
---
source: llvm/src/lib.rs
expression: llvm_ir
---
; ModuleID = 'main'
source_filename = "main"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-i128:128-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: nounwind
declare void @llvm.gcroot(ptr, ptr) #0

declare ptr @gc_malloc(i64)

declare void @gc_run()

declare void @_TM0_5print1n(i64)

declare void @_TM0_5print1b(i1)

define private void @_glob() {
entry:
  unreachable
}

define i64 @_TM0_1f1n(i64 %"n#param#sym20#") gc "shadow-stack" {
entry:
  br label %cond

cond:                                             ; preds = %body, %entry
  %"n#local#sym20#2" = phi i64 [ %"add#", %body ], [ %"n#param#sym20#", %entry ]
  %"lt#" = icmp slt i64 %"n#local#sym20#2", 42
  br i1 %"lt#", label %body, label %end_while

body:                                             ; preds = %cond
  %"add#" = add i64 %"n#local#sym20#2", 1
  call void @gc_run()
  br label %cond

end_while:                                        ; preds = %cond
  ret i64 %"n#local#sym20#2"
}

attributes #0 = { nounwind }
